--- a/proyecto/package.json
+++ b/proyecto/package.json
@@ -13,15 +13,18 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@fontsource/inter": "^5.2.8",
+    "@mui/icons-material": "^7.3.4",
     "@mui/joy": "^5.0.0-beta.52",
     "@mui/material": "^7.3.3",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "@types/react-router-dom": "^5.3.3",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "react-router-dom": "7.9.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
-    "@types/react": "^19.1.10",
-    "@types/react-dom": "^19.1.7",
+    "@types/react": "^19.2.0",
+    "@types/react-dom": "^19.2.0",
     "@vitejs/plugin-react": "^5.0.0",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
