--- a/proyecto/package.json
+++ b/proyecto/package.json
@@ -19,12 +19,14 @@
     "@types/react-router-dom": "^5.3.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-router-dom": "7.9.3"
+    "react-router-dom": "7.9.3",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
+    "@types/react-toastify": "^4.0.2",
     "@vitejs/plugin-react": "^5.0.0",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
